# Python-Project-Template

./: .coveragerc  .gitignore  Pipfile  README.md  README.rst  dockerfile  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  index.rst
poetry_template/: profiler.py  runner.py  settings.py
poetry_template/package_one/: module_one.py
poetry_template/package_two/: module_two.py
src/big_package/: context.py  runner.py
src/big_package/package_one/: module_one.py
src/big_package/package_two/: module_two.py
tests/: conftest.py  context.py  test_poetry_template.py
tests/package_one/: conftest.py  test_module_one.py
tests/package_two/: test_module_two.py
