[tool.poetry]
name = "poetry-template"
version = "0.1.3"
description = "A minimal, strictly structured Python project template."

license = "MIT"
authors = ["Mislav Jaksic <jaksicmislav@gmail.com>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/MislavJaksic/Python-Project-Template"
repository = "https://github.com/MislavJaksic/Python-Project-Template"
documentation = "https://github.com/MislavJaksic/Python-Project-Template"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
black = "^19.10b0"
pytest = "^5.2"
sphinx = "^2.3.1"

[tool.poetry.scripts]
poetry-template = "poetry_template.runner:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
