[tool.poetry]
name = "poetry-template"
version = "0.1.5"
description = "A minimal, strictly structured Python project template."

license = "MIT"
authors = ["Mislav Jaksic <jaksicmislav@gmail.com>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/MislavJaksic/Python-Project-Template"
repository = "https://github.com/MislavJaksic/Python-Project-Template"
documentation = "https://github.com/MislavJaksic/Python-Project-Template"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-integration = "0.2.2"
Sphinx = "^5.0.0"
black = "^22.3.0"
mypy = "^0.960"

[tool.poetry.scripts]
poetry-template = "poetry_template.runner:run"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
# plugins = pydantic.mypy

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
